--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,39 +17,46 @@
 </head>
 
 <body class="bg-dark">
-  <div class="container">
-    <div class="card card-login mx-auto mt-5">
-      <div class="card-header">Login</div>
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <div class="form-check">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox"> Remember Password</label>
-            </div>
-          </div>
-          <a class="btn btn-primary btn-block" href="index.html">Login</a>
-        </form>
-        <div class="text-center">
-          <a class="d-block small mt-3" href="register.html">Register an Account</a>
-          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+<div class="container">
+  <div class="card card-login mx-auto mt-5">
+    <div class="card-header">관리자 페이지 로그인</div>
+    <div class="card-body">
+      <form action="login"  method="POST">
+        <div class="form-group">
+          <label for="exampleInputEmail1">아이디</label>
+          <input class="form-control" name="id" type="id" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">패스워드</label>
+          <input class="form-control" name="password" type="password" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox"> 비밀번호 기억</label>
+          </div>
+        </div>
+        <input type="submit" class="btn btn-primary btn-block" value="로그인"/>
+      </form>
+      <div class="text-center">
+        <a class="d-block small mt-3" href="register.html">관리자 계정 회원가입</a>
+        <a class="d-block small" href="forgot-password.html">비밀번호 찾기</a>
       </div>
     </div>
   </div>
-  <!-- Bootstrap core JavaScript-->
-  <script src="jquery/jquery.min.js"></script>
-  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Core plugin JavaScript-->
-  <script src="jquery-easing/jquery.easing.min.js"></script>
+</div>
+<!-- Bootstrap core JavaScript-->
+<script src="jquery/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="jquery-easing/jquery.easing.min.js"></script>
 </body>
+<% if(!login_success) { %>
+<script type="text/javascript">
+  alert('아이디와 비밀번호를 다시 확인해주세요.!');
+</script>
+<%
+  }
+%>
 
 </html>
