express-session 모듈을 이용한 로그인 로그아웃 세션 구현

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -214,10 +214,12 @@
             </div>
           </form>
         </li>
+        <form name="logout_form" action="/logout" method="POST">
         <li class="nav-item">
-          <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+          <a onclick="javascript:document.logout_form.submit();" class="nav-link" data-toggle="modal" data-target="#exampleModal">
             <i class="fa fa-fw fa-sign-out"></i>Logout</a>
         </li>
+        </form>
       </ul>
     </div>
   </nav>
