bootscrap modal ´ëȭ»óÀÚ Ã߰¡

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -232,7 +232,7 @@
           <!-- Example Bar Chart Card-->
           <div class="card mb-3">
             <div class="card-header">
-              <i class="fa fa-bar-chart"></i> Bar Chart Example</div>
+              <i class="fa fa-bar-chart"></i> 월간 가입자 수</div>
             <div class="card-body">
               <div class="row">
                 <div class="col-sm-8 my-auto">
